--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
